Changed issue with flickering display

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ body {
   margin-bottom: 10px;
   border: 2px solid #333;
   border-radius: 5px;
+  background-color: lightcyan;
 }
 #display {
   width: 98%;
@@ -36,7 +37,7 @@ body {
   font-size: 54px;
   text-align: right;
   border: none;
-  background-color: lightcyan;
+  background-color: transparent;
   opacity: 1;
   transition: opacity 0.1s ease;
 }
